--- a/css/doggies.css
+++ b/css/doggies.css
@@ -89,13 +89,17 @@ flex-direction: column;
 width: 100%;
 
 }
+
+main a{
+  text-decoration: none;
+}
 section{
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   column-gap: 5px;
-  margin-bottom: 10px;;
+  margin-bottom: 30px;;
 }
 
 .siresCards, .damsCards, .pupsCards{
@@ -116,6 +120,10 @@ section{
 text-align: left;
  }
 
+ img{
+  width: 200px;
+  border-radius: 20%;
+ }
 
 /* Footer */
 footer {
