--- a/css/doggies.css
+++ b/css/doggies.css
@@ -123,7 +123,36 @@ text-align: left;
  img{
   width: 200px;
   border-radius: 20%;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
  }
+
+ span{
+  font-size: 1.5rem;
+ }
+
+ button {
+  border-radius: 4px;
+  border: 1px solid black;
+  padding: 5px 10px; /* Adjust padding as needed */
+  margin: 5px;
+  background-color: #007bff; /* Button background color */
+  color: #fff; /* Button text color */
+  cursor: pointer; /* Add a pointer cursor on hover */
+  transition: background-color 0.3s, color 0.3s; /* Add transition effects */
+}
+
+/* Style button links */
+button a {
+  text-decoration: none;
+  color: #fff; /* Set the link color */
+}
+
+/* Button hover styles */
+button:hover {
+  background-color: #0056b3; /* Change the background color on hover */
+  color: #fff; /* Change the text color on hover */
+}
 
 /* Footer */
 footer {
