--- a/css/styles.css
+++ b/css/styles.css
@@ -1,194 +1,287 @@
 /* universal */
-body {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-size: 16px;
-    }
-
-    /* Header/ Navigation styles */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      z-index: 1000; /* Adjust the z-index to ensure it's above other content */
-    }
-    
-
-    .logo {
-      padding-left: 20px;
-      font-size: 3vw;
-   
-    }
-
-    .logo a{
-      text-decoration: none;
-      color: #fff;
-    }
-
-    .navbar ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: row;
-      list-style: none;
-      margin: 0; /* Remove default margin to prevent spacing issues */
-      padding: 0; /* Remove default padding */
-    }
-
-    .navbar ul li {
-      position: relative;
-    }
-
-    .navbar ul li a {
-      text-decoration: none;
-      padding: 15px;
-      font-size: 1.2rem;
-      color: #fff;
-      transition: background-color 0.3s;
-    }
-
-    /* Dropdown styles */
-    .dropdown {
-      position: relative;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #333;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown-content a {
-      color: #fff;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #444; /* Change the background color on hover */
-    }
-
-    /* Main */
-   main{
-    margin-bottom: 20px;
+* , body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
 }
-    .homeContainer{
-    display: flex;
+
+
+/* Header/ Navigation styles */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  z-index: 1000;
+  /* Adjust the z-index to ensure it's above other content */
+}
+
+
+.logo {
+  padding-left: 20px;
+
+}
+
+.logo a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 3vw;
+}
+
+.navbar ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  /* Remove default margin to prevent spacing issues */
+  padding: 0;
+  /* Remove default padding */
+  width: 100%;
+  /* Set the width to 100% to span the full width */
+}
+
+.navbar ul li {
+  position: relative;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  padding: 15px;
+  color: #fff;
+  transition: background-color 0.3s;
+  font-size: 2.5vw;
+}
+
+/* Dropdown styles */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #444;
+  /* Change the background color on hover */
+}
+
+/* Main */
+main {
+  margin-bottom: 20px;
+ 
+
+}
+
+.homeContainer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  position: relative;
+}
+
+#about {
+
+  width: 60%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  flex-wrap: wrap;
+
+}
+
+.aboutUs {
+  display: flex;
+}
+
+.imgContainer img {
+  max-width: 100%;
+}
+
+.missionStatement {
+  padding: 10px;
+}
+
+#contact {
+  padding: 20px;
+  width: 40%;
+}
+
+form {
+  max-width: 250px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f4f4f4;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  width: 95%;
+  padding: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+/* Footer */
+footer {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid black;
+  background-color: #333;
+  /* Set a background color for the footer */
+  color: #fff;
+  /* Set your preferred text color */
+  padding: 10px 0;
+  /* Increase the padding to add space above and below the text */
+
+}
+
+/* Add margin to the footer's ul */
+footer ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  list-style: none;
+}
+
+/* Style footer links */
+footer ul a {
+  text-decoration: none;
+  color: #fff;
+  /* Set the link color */
+  transition: color 0.3s;
+  /* Add a color transition effect */
+}
+
+/* Style footer links on hover */
+footer ul a:hover {
+  color: #007bff;
+  /* Change the link color on hover */
+}
+
+@media only screen and (max-width: 768px) {
+  .homeContainer {
+    flex-direction: column;
+    align-items: center;
+    /* Center all content vertically */
+    text-align: center;
+    /* Center text content horizontally */
+    /* display: flex;
     justify-content: center;
     align-content: center;
     width: 100%;
-    position:relative;
-    }
+    position:relative; */
+  }
 
-    #about{
-  
-    width: 60%;
-    display: flex;
-    justify-content: flex-start;
+#about {
+  width: 100%;
+
+
+}
+
+.aboutUs {
+  flex-direction: column;
+  flex-direction: column;
+  align-items: center;
+  /* Center all content vertically */
+  text-align: center;
+  /* Center text content horizontally */
+
+}
+
+.imgContainer img {
+  margin: 0 auto;
+  /* Center the image horizontally */
+  max-width: 50%;
+}
+
+.missionStatement {
+  padding: 10px;
+}
+
+#contact {
+  width: 100%;
+}
+}
+
+@media only screen and (max-width: 425px){
+  .navbar {
     flex-direction: column;
-    align-items:flex-start;
-    padding: 20px;
-    flex-wrap: wrap;
-
-    }
-    
-    .aboutUs{
-      display: flex;
-    }
-
-    .missionStatement{
-       padding: 10px;
-    } 
-
-    #contact{
-        padding: 20px;
-        width: 40%;
-    }
-
-    form {
-        max-width: 250px;
-        margin: 0 auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #f4f4f4;
-    }
-
-    label {
-        display: block;
-        margin-bottom: 10px;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"],
-    textarea {
-        width: 95%;
-        padding: 5px;
-        margin-bottom: 5px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-
-    textarea {
-        height: 100px;
-    }
-
-    input[type="submit"] {
-        background-color: #007bff;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-
-    input[type="submit"]:hover {
-        background-color: #0056b3;
-    }
-   /* Footer */
-footer {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-top: 1px solid black;
-    background-color: #333; /* Set a background color for the footer */
-    color: #fff; /* Set your preferred text color */
-    padding: 10px 0; /* Increase the padding to add space above and below the text */
-
-  }
-  
-  /* Add margin to the footer's ul */
-  footer ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    flex-direction: row;
-    list-style: none;
   }
   
-  /* Style footer links */
-  footer ul a {
-    text-decoration: none;
-    color: #fff; /* Set the link color */
-    transition: color 0.3s; /* Add a color transition effect */
+  
+  .logo {
+    padding: 20px;
+  
+  }
+  .logo a{
+    font-size: 5vw;
+  
   }
   
-  /* Style footer links on hover */
-  footer ul a:hover {
-    color: #007bff; /* Change the link color on hover */
+  .navbar ul {
+    flex-direction: column;
   }
+  
+  .navbar ul li a {
+    font-size: 4vw;
+}
+}
