--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,15 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
+ 
 }
 
+body{
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  min-height: 100vh; /* Ensure the container takes up at least the full viewport height */
+}
 
 /* Header/ Navigation styles */
 
@@ -70,6 +77,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  
 }
 
 .dropdown:hover .dropdown-content {
@@ -81,6 +89,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+
 }
 
 .dropdown-content a:hover {
@@ -88,10 +97,12 @@
   /* Change the background color on hover */
 }
 
+
 /* Main */
 main {
   margin-bottom: 20px;
- 
+  flex-grow: 1;
+  margin-bottom: auto; /* Push the footer to the bottom */
 
 }
 
@@ -103,6 +114,11 @@ main {
   position: relative;
 }
 
+h3{
+font-size: 2rem;
+padding: 20px;
+}
+
 #about {
 
   width: 60%;
@@ -110,26 +126,30 @@ main {
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  padding: 20px;
+  padding: 20px 10px 20px 20px ;
   flex-wrap: wrap;
 
 }
 
+
 .aboutUs {
   display: flex;
+  column-gap: 20px;
 }
 
 .imgContainer img {
   max-width: 100%;
 }
 
-.missionStatement {
-  padding: 10px;
+
+.missionStatement p {
+  font-size: 1.5rem;
 }
 
 #contact {
-  padding: 20px;
+  padding: 20px 20px 20px 10px ;
   width: 40%;
+
 }
 
 form {
@@ -232,7 +252,6 @@ footer ul a:hover {
 #about {
   width: 100%;
 
-
 }
 
 .aboutUs {
@@ -242,6 +261,7 @@ footer ul a:hover {
   /* Center all content vertically */
   text-align: center;
   /* Center text content horizontally */
+  row-gap: 20px;
 
 }
 
@@ -253,12 +273,29 @@ footer ul a:hover {
 
 .missionStatement {
   padding: 10px;
+ 
 }
+
+
 
 #contact {
   width: 100%;
+  padding:0;
+  margin-bottom: 20px;
+}
+
+h3{
+  display: flex;
+  padding-top: 0;
+}
+#about h3{
+  padding: 0 0 20px 0;
+}
+#contact h3{
+  padding-left: 40px;
 }
 }
+
 
 @media only screen and (max-width: 425px){
   .navbar {
@@ -283,5 +320,14 @@ footer ul a:hover {
   
   .navbar ul li a {
     font-size: 4vw;
+}
+h3{
+  font-size: 1.5rem;
+}
+
+
+
+.missionStatement p {
+  font-size: 1rem;
 }
 }
