--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 /* universal */
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Playfair+Display&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +14,15 @@ body{
   flex-direction: column;
   font-size: 16px;
   min-height: 100vh; /* Ensure the container takes up at least the full viewport height */
+  font-family: 'Playfair Display', serif;
+ 
 }
+
+h2, h3, p, button {
+  font-size: 1rem; /* Use relative font size */
+}
+
+
 
 /* Header/ Navigation styles */
 
@@ -30,12 +40,15 @@ body{
 
 .logo {
   padding-left: 20px;
+  font-family: 'Black Ops One', Georgia, 'Times New Roman', Times, serif;
+
 
 }
 
 .logo a {
   text-decoration: none;
-  color: #fff;
+  color: #007bff;
+  text-shadow: 1px 1px 2px #fff;
   font-size: 3vw;
 }
 
@@ -57,12 +70,17 @@ body{
   position: relative;
 }
 
+
 .navbar ul li a {
   text-decoration: none;
   padding: 15px;
   color: #fff;
   transition: background-color 0.3s;
   font-size: 2.5vw;
+}
+
+.navbar ul li a:hover {
+  color: #007bff;
 }
 
 /* Dropdown styles */
